--- a/src/main/resources/static/datail.html
+++ b/src/main/resources/static/datail.html
@@ -1,53 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 包含所需的样式和脚本 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/theme-chalk/index.css">
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/index.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email List</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- 引入 Element UI 样式 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/theme-chalk/index.css">
+    <!-- 引入 Vue.js 和 Element UI 库 -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/index.js"></script>
+    <!-- 引入 TinyMCE 样式表 -->
+    <link rel="stylesheet" href="https://cdn.tiny.cloud/1/no-api-key/tinymce/5.10.1-114/skins/ui/oxide/content.min.css">
 </head>
 <body>
 <div id="app">
-  <el-container>
-    <el-main>
-      <h1>邮件详情</h1>
-      <div>
-        <p><strong>发件人：</strong>{{ email.sender }}</p>
-        <p><strong>标题：</strong>{{ email.title }}</p>
-        <p><strong>邮件内容：</strong></p>
-        <div v-html="email.content"></div> <!-- 使用 v-html 显示富文本内容 -->
-      </div>
-    </el-main>
-  </el-container>
+    <el-container>
+        <el-main>
+            <h1>邮件详情</h1>
+            <div>
+                <p><strong>发件人：</strong>{{ email.sender }}</p>
+                <p><strong>标题：</strong>{{ email.title }}</p>
+                <p><strong>邮件内容：</strong></p>
+                <!-- 使用 TinyMCE 富文本编辑器容器 -->
+                <textarea id="tinymce-editor"></textarea>
+            </div>
+        </el-main>
+    </el-container>
 </div>
 
 <script>
-  // 使用 JavaScript 获取查询参数中的邮件ID
-  const urlParams = new URLSearchParams(window.location.search);
-  const emailId = urlParams.get('id');
+    // 使用 JavaScript 获取查询参数中的邮件ID
+    const urlParams = new URLSearchParams(window.location.search);
+    const emailId = urlParams.get('id');
 
-
-  new Vue({
-    el: '#app',
-    data: {
-      email: []
-    },
-    created() {
-      this.fetchEmails(emailId);
-    },
-    methods: {
-      fetchEmails(emailId) {
-        // 使用 Axios 或其他 AJAX 库发送请求
-        axios.get('http://localhost:8080/springboot-demo/email/detail?${emailId}')
-                .then(response => {
-                  this.email = response.data;
-                })
-                .catch(error => {
-                  console.error('获取邮件数据失败：', error);
+    new Vue({
+        el: '#app',
+        data: {
+            email: {
+                sender: '',
+                title: ''
+            }
+        },
+        created() {
+            this.fetchEmails(emailId);
+        },
+        methods: {
+            fetchEmails(emailId) {
+                // 使用 Axios 或其他 AJAX 库发送请求获取邮件数据
+                axios.get(`http://localhost:8080/email/detail?id=${emailId}`)
+                    .then(response => {
+                        this.email = response.data;
+                        this.initTinyMCEEditor(this.email.content); // 初始化 TinyMCE 编辑器
+                    })
+                    .catch(error => {
+                        console.error('获取邮件数据失败：', error);
+                    });
+            },
+            initTinyMCEEditor(content) {
+                tinymce.init({
+                    selector: '#tinymce-editor',
+                    height: 300,
+                    menubar: false,
+                    plugins: 'autoresize',
+                    readonly: true, // 设置为只读模式
+                    skin: 'oxide',
+                    content_style: 'body { font-family: Arial, Helvetica, sans-serif; font-size: 14px; }',
+                    setup: function (editor) {
+                        editor.on('init', function () {
+                            editor.setContent(content); // 设置富文本内容
+                        });
+                    }
                 });
-      }
-    }
-  });
+            }
+        }
+    });
 </script>
+<!-- 引入 TinyMCE 脚本 -->
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5.10.1-114/tinymce.min.js" referrerpolicy="origin"></script>
 </body>
 </html>
