--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,72 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email List</title>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-
-  <!-- 引入 Element UI 样式 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/theme-chalk/index.css">
-
-  <!-- 引入 Vue.js 和 Element UI 库 -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/index.js"></script>
-  <!-- 引入 Axios 库 -->
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email List</title>
+    <!-- 引入 Element UI 样式 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/theme-chalk/index.css">
 </head>
 <body>
 <div id="app">
-  <el-container>
-    <el-header>
-      <h1>Email List</h1>
-    </el-header>
-    <el-main>
-      <el-table :data="emails" style="width: 100%">
-        <el-table-column prop="title" label="标题"></el-table-column>
-        <el-table-column prop="sender" label="发件人"></el-table-column>
-        <el-table-column prop="createTime" label="发送时间"></el-table-column>
-        <el-table-column label="操作">
-          <template slot-scope="scope">
-            <el-button type="primary" @click="viewDetails(scope.row.id)">查看详情</el-button>
-          </template>
-        </el-table-column>
-      </el-table>
-    </el-main>
-  </el-container>
+    <router-view></router-view>
 </div>
 
-<script>
-  new Vue({
-    el: '#app',
-    data: {
-      emails: []
-    },
-    created() {
-      this.fetchEmails();
-    },
-    methods: {
-      fetchEmails() {
-        // 使用 Axios 或其他 AJAX 库发送请求
-        axios.get('http://localhost:8080/springboot-demo/email/listEmail')
-                .then(response => {
-                  this.emails = response.data;
-                })
-                .catch(error => {
-                  console.error('获取邮件数据失败：', error);
-                });
-      },
-      viewDetails(id) {
-        // 在这里可以访问当前记录的ID（id），然后执行相关操作
-        console.log('当前记录的ID：', id);
-        // 使用 JavaScript 来进行页面跳转
-        window.location.href = `detail.html?id=${id}`;
-      }
-    }
-  });
-</script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/index.js"></script>
+<!-- 引入 Axios 库 -->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<!-- 引入 Vue Router -->
+<script src="https://cdn.jsdelivr.net/npm/vue-router@3.6.2/dist/vue-router.js"></script>
 
+<script>
+    // 创建EmailList组件
+    const EmailList = {
+        template: `
+            <div>
+                <el-container>
+                    <el-header>
+                        <h1>Email List</h1>
+                    </el-header>
+                    <el-main>
+                        <el-table :data="emails" style="width: 100%">
+                            <el-table-column prop="title" label="标题"></el-table-column>
+                            <el-table-column prop="sender" label="发件人"></el-table-column>
+                            <el-table-column prop="createTime" label="发送时间"></el-table-column>
+                            <el-table-column label="操作">
+                                <template slot-scope="scope">
+                                    <el-button type="primary" @click="viewDetails(scope.row.id)">查看详情</el-button>
+                                </template>
+                            </el-table-column>
+                        </el-table>
+                    </el-main>
+                </el-container>
+            </div>
+        `,
+        data() {
+            return {
+                emails: []
+            }
+        },
+        created() {
+            this.fetchEmails();
+        },
+        methods: {
+            fetchEmails() {
+                axios.get('http://localhost:8080/email/listEmail')
+                    .then(response => {
+                        this.emails = response.data;
+                    })
+                    .catch(error => {
+                        console.error('获取邮件数据失败：', error);
+                    });
+            },
+            viewDetails(id) {
+                // 使用路由导航到详情页，并传递ID参数
+                this.$router.push({ name: 'detail', params: { id: id }});
+            }
+        }
+    };
+
+    // 创建EmailDetail组件
+    const EmailDetail = {
+        template: `
+            <div>
+                <el-container>
+                    <el-main>
+                        <h1>邮件详情</h1>
+                        <div>
+                            <p><strong>发件人：</strong>{{ email.sender }}</p>
+                            <p><strong>标题：</strong>{{ email.title }}</p>
+                            <p><strong>邮件内容：</strong></p>
+                            <div v-html="email.content"></div>
+                        </div>
+                    </el-main>
+                </el-container>
+            </div>
+        `,
+        data() {
+            return {
+                email: {}
+            }
+        },
+        created() {
+            this.fetchEmail();
+        },
+        methods: {
+            fetchEmail() {
+                const id = this.$route.params.id; // 获取路由参数中的ID
+                axios.get(`http://localhost:8080/email/detail?id=${id}`)
+                    .then(response => {
+                        this.email = response.data;
+                    })
+                    .catch(error => {
+                        console.error('获取邮件详情失败：', error);
+                    });
+            }
+        }
+    };
+
+    // 创建路由实例
+    const router = new VueRouter({
+        routes: [
+            { path: '/', component: EmailList },
+            { path: '/detail/:id', name: 'detail', component: EmailDetail }
+        ]
+    });
+
+    // 创建Vue实例，将路由挂载到Vue实例中
+    new Vue({
+        el: '#app',
+        router: router
+    });
+</script>
 </body>
 </html>
