显示email标题、发件人、创建时间

--- a/src/main/resources/static/datail.html
+++ b/src/main/resources/static/datail.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email List</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <!-- 引入 Element UI 样式 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/theme-chalk/index.css">
-    <!-- 引入 Vue.js 和 Element UI 库 -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.15.3/lib/index.js"></script>
-    <!-- 引入 TinyMCE 样式表 -->
-    <link rel="stylesheet" href="https://cdn.tiny.cloud/1/no-api-key/tinymce/5.10.1-114/skins/ui/oxide/content.min.css">
+    <!-- 其他元标记和样式表 -->
+
+    <link href="https://unpkg.com/@wangeditor/editor@latest/dist/css/style.css" rel="stylesheet">
+    <style>
+        #editor—wrapper {
+            border: 1px solid #ccc;
+            z-index: 100; /* 按需定义 */
+        }
+        #editor-container { height: 500px; }
+    </style>
 </head>
 <body>
+<!-- 其他页面内容 -->
+
 <div id="app">
     <el-container>
         <el-main>
@@ -22,14 +23,43 @@
                 <p><strong>发件人：</strong>{{ email.sender }}</p>
                 <p><strong>标题：</strong>{{ email.title }}</p>
                 <p><strong>邮件内容：</strong></p>
-                <!-- 使用 TinyMCE 富文本编辑器容器 -->
-                <textarea id="tinymce-editor"></textarea>
+                <!-- 使用 wangEditor 富文本编辑器容器 -->
+                <div id="editor-container"></div>
             </div>
         </el-main>
     </el-container>
 </div>
 
+<script src="https://unpkg.com/@wangeditor/editor@latest/dist/index.js"></script>
+
 <script>
+    const { createEditor, createToolbar } = window.wangEditor
+
+    const editorConfig = {
+        placeholder: 'Type here...',
+        onChange(editor) {
+            const html = editor.getHtml()
+            console.log('editor content', html)
+            // 也可以同步到 <textarea>
+        }
+    }
+
+    const editor = createEditor({
+        selector: '#editor-container',
+        html: '<p><br></p>',
+        config: editorConfig,
+        mode: 'default', // or 'simple'
+    })
+
+    const toolbarConfig = {}
+
+    const toolbar = createToolbar({
+        editor,
+        selector: '#toolbar-container',
+        config: toolbarConfig,
+        mode: 'default', // or 'simple'
+    })
+
     // 使用 JavaScript 获取查询参数中的邮件ID
     const urlParams = new URLSearchParams(window.location.search);
     const emailId = urlParams.get('id');
@@ -51,32 +81,15 @@
                 axios.get(`http://localhost:8080/email/detail?id=${emailId}`)
                     .then(response => {
                         this.email = response.data;
-                        this.initTinyMCEEditor(this.email.content); // 初始化 TinyMCE 编辑器
+                        // 在 wangEditor 中设置邮件内容
+                        editor.txt.html(this.email.content);
                     })
                     .catch(error => {
                         console.error('获取邮件数据失败：', error);
                     });
-            },
-            initTinyMCEEditor(content) {
-                tinymce.init({
-                    selector: '#tinymce-editor',
-                    height: 300,
-                    menubar: false,
-                    plugins: 'autoresize',
-                    readonly: true, // 设置为只读模式
-                    skin: 'oxide',
-                    content_style: 'body { font-family: Arial, Helvetica, sans-serif; font-size: 14px; }',
-                    setup: function (editor) {
-                        editor.on('init', function () {
-                            editor.setContent(content); // 设置富文本内容
-                        });
-                    }
-                });
             }
         }
     });
 </script>
-<!-- 引入 TinyMCE 脚本 -->
-<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5.10.1-114/tinymce.min.js" referrerpolicy="origin"></script>
 </body>
 </html>
