提取邮箱中标题为“发票”，发件人为诺诺网或者为“票同”的邮件以及pdf。检索出来存储到数据库中

--- a/src/main/resources/static/datail.html
+++ b/src/main/resources/static/datail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <!-- 其他元标记和样式表 -->
 
     <link href="https://unpkg.com/@wangeditor/editor@latest/dist/css/style.css" rel="stylesheet">
